# LiveMonitor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: .rustc_info.json  all.html  crates.js  fn.main.html  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js
docs/LiveMonitor/: struct.Monitor.html
docs/LiveMonitor/guide/: fn.new.html  index.html
docs/LiveMonitor/pltGraph/: fn.new.html  index.html
docs/LiveMonitor/pltHeatmap/: struct.Plotpara.html
docs/LiveMonitor/server/: fn.GraphServer.html  fn.HeatmapServer.html  index.html
docs/pltGraph/: enum.PlotMode.html  struct.Plotpara.html
docs/pltHeatmap/: enum.PlotMode.html  fn.new.html  index.html  sidebar-items.js
docs/search.desc/LiveMonitor/: LiveMonitor-desc-0-.js
docs/server/: sidebar-items.js
docs/src/LiveMonitor/: guide.rs.html  main.rs.html  pltGraph.rs.html  pltHeatmap.rs.html  server.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.PartialEq.js
docs/trait.impl/core/default/: trait.Default.js
docs/trait.impl/core/fmt/: trait.Display.js
docs/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/trait.impl/eframe/epi/: trait.App.js
src/: guide.rs  main.rs  pltGraph.rs  pltHeatmap.rs  plt_window.rs  server.rs
