[package]
name = "LiveMonitor"
version = "0.4.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
eframe = "0.31.1"
egui-plotter = "0.4.0"
plotters = "0.3.0"
rayon = "1.10.0"
dashmap = "7.0.0-rc1"
strum = "0.27.1"
strum_macros = "0.27.1"

[profile.release]
opt-level = 3  # Maximum optimization level
lto = true
overflow-checks = false